# mir-commander

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile.linux  LICENSE  Makefile  README.md  build.py  build_dmg.py  clean_build.cmd  config.yaml  data.yaml  default_config.yaml  dev_run.cmd  dev_run.sh  dist_msi.cmd  generate_i18n.cmd  generate_i18n.sh  generate_translations.cmd  generate_translations.sh  pyproject.toml  qrc_to_rcc.cmd  qrc_to_rcc.sh  requirements-dev.txt  requirements.txt  resources.cmd  setup.cfg  ts_to_qm.cmd  ts_to_qm.sh
.cursor/rules/: common.mdc  structure.mdc
build_scripts/: build.py  build_appimage.py  build_dmg.py  build_lib.py  build_msi.py
default_configs/: config.yaml  recent.yaml
docs/: development.txt
mir_commander/: __init__.py  __main__.py  application.py  base_config.py  const.py  consts.py  default_config.py  errors.py  exceptions.py  logging.py  main.py  main_window.py  plugins_loader.py  recent_projects.py  settings.py
mir_commander/api/: __init__.py  file_exporter.py  file_importer.py  metadata.py  plugin.py  plugin_registry.py  program.py  project_node.py  project_node_schema.py  resources.py
mir_commander/api/data_structures/: __init__.py  atomic_coordinates.py  base_data_structure.py  molecule.py  volume_cube.py
mir_commander/core/: __init__.py  algebra.py  chemistry.py  chemistry.pyx  config.py  consts.py  errors.py  file_manager.py  logging.py  mathematics.py  models.py  plugin_registry_adapter.py  plugins_loader.py  plugins_registry.py  project.py  project_node.py  project_node_registry.py  utils.py
mir_commander/core/file_exporters/: __init__.py  utils.py  xyz_exporter.py
mir_commander/core/file_importers/: __init__.py  cclib_importer.py  cfour_importer.py  gaussian_cube_importer.py  mdlmol2000_importer.py  unex_importer.py  utils.py  xyz_importer.py
mir_commander/core/graphics/: camera.py  font_atlas.py  projection.py  resource_manager.py  transform.py  utils.py
mir_commander/core/item_exporters/: xyz_exporter.py
mir_commander/core/models/: __init__.py  data.py  item.py  molecule.py  unex.py  volcube.py  volume_cube.py
mir_commander/core/network/: utils.py
mir_commander/core/parsers/: __init__.py  cclib_parser.py  cfour_parser.py  consts.py  gaucube_parser.py  mdlmol2000_parser.py  parser.py  unex_parser.py  xyz_parser.py
mir_commander/core/plugin_system/: file_registry.py  plugin_registry_adapter.py  plugins_manager.py  program_registry.py  project_node_registry.py
mir_commander/core/project_nodes/: __init__.py  atomic_coordinates.py  atomic_coordinates_group.py  molecule.py  unex.py  utils.py  volume_cube.py
mir_commander/data_structures/: base.py  molecule.py
mir_commander/data_structures/unex/: __init__.py  molecule.py  project.py
mir_commander/parsers/: __init__.py  base.py  cclib_parser.py  cfour_parser.py  cfour_rapser.py  mdlmol2000_parser.py  unex_parser.py  utils.py  xyz_parser.py
mir_commander/plugin_system/: file_exporter.py  file_importer.py  item_exporter.py  project_node.py  project_node_schema.py
mir_commander/projects/: __init__.py  base.py  config.py  molecule.py  temporary.py  utils.py
mir_commander/startup/: file_manager.py  logging.py  program_manager.py  project_nodes.py
mir_commander/ui/: about.py  app_config.py  application.py  base_config.py  config.py  errors.py  export_item_dialog.py  main_window.py  mdi_area.py  program_manager.py  project_window.py  recent_projects.py  updates.py
mir_commander/ui/docks/: base.py  config.py  console_dock.py  program_control_panel.py
mir_commander/ui/main_window/: __init__.py
mir_commander/ui/programs/: __init__.py
mir_commander/ui/recent_projects/: config.py  recent_projects_dialog.py
mir_commander/ui/sdk/: async_worker.py  widget.py
mir_commander/ui/settings/: base.py  config.py  general_page.py  plugins_page.py  project_page.py  settings_dialog.py
mir_commander/ui/utils/: item.py  program.py  program_control_panel.py  sub_window_menu.py  sub_window_toolbar.py  widget.py
mir_commander/ui/widgets/: __init__.py  about.py  export_item_dialog.py
mir_commander/utils/: chem.py  config.py  consts.py  item.py  items_model.py  logging.py  math.py  message_channel.py  settings.py  text.py  widget.py
mir_commander/utils/data/: molecule.py
mir_commander/widgets/: __init__.py  about.py  console.py  preferences.py  recent_projects.py
mir_commander/widgets/dock_widget/: __init__.py  base.py  console.py  object.py  project.py
mir_commander/widgets/settings/: __init__.py  category.py  general.py  project.py  section.py
plugins/builtin/file_exporters/: __init__.py  loader.py  xyz_exporter.py
plugins/builtin/file_importers/: __init__.py  cclib_importer.py  cfour_importer.py  gaussian_cube_importer.py  loader.py  mdlmol2000_importer.py  unex_importer.py  xyz_importer.py
plugins/builtin/programs/: __init__.py  loader.py
plugins/builtin/project_nodes/: __init__.py  atomic_coordinates.py  atomic_coordinates_group.py  loader.py  molecule.py  unex.py  volume_cube.py
plugins/builtin/resources/: __init__.py  icons.qrc  loader.py  resources.qrc
plugins/file_exporters/: __init__.py  utils.py  xyz_exporter.py
plugins/file_importers/: __init__.py  cclib_importer.py  cfour_importer.py  gaussian_cube_importer.py  mdlmol2000_importer.py  unex_importer.py  utils.py  xyz_importer.py
plugins/programs/: __init__.py  node_changed_actions.py  program.py
plugins/programs/cartesian_editor/: __init__.py  control_panel.py  program.py
plugins/programs/molecular_visualizer/: __init__.py  build_bonds_dialog.py  config.py  context_menu.py  control_panel.py  (+4 more)
plugins/project_nodes/: __init__.py  atomic_coordinates.py  atomic_coordinates_group.py  molecule.py  unex.py  utils.py  volume_cube.py
resources/: icons.qrc  resources.qrc  translations.qrc
resources/i18n/: app_en.ts  app_ru.ts  en.ts  ru.ts
resources/icons/: actions.qrc  general.qrc  items.qrc  project_nodes.qrc
resources/policy/: LICENSE
resources/styles/: stylesheets.qss
resources/translations/: app_ru.ts
tests/utils/: test_config.py
(+417 files in other folders)
