[project]
name = "mir-commander"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cclib>=1.8.1",
    "numpydantic>=1.6.9",
    "pillow>=11.3.0",
    "pydantic>=2.11.4",
    "pydantic-extra-types>=2.10.5",
    "pyopengl>=3.1.10",
    "pyopengl-accelerate>=3.1.10",
    "pyside6-essentials>=6.9.3",
    "pyyaml>=6.0.2",
]

[project.scripts]
mircmd = "mir_commander.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "briefcase>=0.3.25",
    "cython>=3.2.1",
    "setuptools>=80.9.0",
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "pre-commit-hooks>=6.0.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.9",
    "types-pyyaml>=6.0.12.20250822",
]

[tool.uv]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.setuptools]
py-modules = []

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
explicit_package_bases = true

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [".venv", "tmp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.briefcase]
project_name = "Mir Commander"
bundle = "com.mircmd"
version = "1.0.1"
url = "https://mircmd.com/"
license.file = "LICENSE"
author = "Valery Vishnevskiy"
author_email = "v.v.vishnevskiy@yandex.ru"

[tool.briefcase.app.mir_commander]
formal_name = "Mir Commander"
description = "A modern GUI for structural chemistry"
long_description = "A modern, powerful graphical user interface for molecular structure modeling and investigation."
sources = [
    "mir_commander",
    "resources",
    "plugins",
]
icon = "resources/icon"
cleanup_paths = [
    "**/app/mir_commander/main.py",
    "**/app/mir_commander/core/**/*.py",
    "**/app/mir_commander/ui/**/*.py",
    "**/app/plugins/**/src/**/*.py",
    "**/app/**/*.cpp",
    "**/app/**/*.png",
    "**/app/**/*.svg",
    "**/app/**/*.ttf",
    "**/app/**/*.qm",
    "**/app/**/*.ts",
    "**/app/**/*.qss",
    "**/app/**/*.qrc",
    "**/app_packages/PySide6/*.app",
    "**/app_packages/PySide6/doc",
    "**/app_packages/PySide6/glue",
    "**/app_packages/PySide6/Qt/translations",
    "**/app_packages/PySide6/Qt/qml",
    "**/app_packages/PySide6/Qt/lib/QtDesigner*",
    "**/app_packages/PySide6/Qt/lib/QtNetwork*",
    "**/app_packages/PySide6/Qt/lib/QtPrintSupport*",
    "**/app_packages/PySide6/Qt/lib/QtLabs*",
    "**/app_packages/PySide6/Qt/lib/QtUiTools*",
    "**/app_packages/PySide6/Qt/lib/QtSvg*",
    "**/app_packages/PySide6/Qt/lib/QtHelp*",
    "**/app_packages/PySide6/Qt/lib/QtTest*",
    "**/app_packages/PySide6/Qt/lib/QtSql*",
    "**/app_packages/PySide6/Qt/lib/QtQml*",
    "**/app_packages/PySide6/Qt/lib/QtQuick*",
    "**/app_packages/PySide6/Qt/lib/QtXml*",
    "**/app_packages/PySide6/Qt/metatypes",
    "**/app_packages/PySide6/Qt/libexec",
    "**/app_packages/PySide6/Qt/plugins/qmltooling",
    "**/app_packages/PySide6/Qt/plugins/sqldrivers",
    "**/app_packages/PySide6/Qt/plugins/tls",
    "**/app_packages/PySide6/Qt/plugins/tls",
    "**/app_packages/PySide6/include",
    "**/app_packages/PySide6/scripts",
    "**/app_packages/PySide6/support",
    "**/app_packages/PySide6/typesystems",
    "**/app_packages/PySide6/lrelease",
    "**/app_packages/PySide6/lupdate",
    "**/app_packages/PySide6/svgtoqml",
    "**/app_packages/PySide6/qml*",
]

[tool.briefcase.app.mir_commander.macOS]
universal_build = false
min_os_version = "12.0"

[tool.briefcase.app.mir_commander.linux]
requires = []

[tool.briefcase.app.mir_commander.linux.system.debian]
system_requires = []

[tool.briefcase.app.mir_commander.linux.system.rhel]
system_requires = []

system_runtime_requires = []

[tool.briefcase.app.mir_commander.linux.system.suse]
system_requires = []

system_runtime_requires = []

[tool.briefcase.app.mir_commander.linux.system.arch]
system_requires = []

system_runtime_requires = []

[tool.briefcase.app.mir_commander.linux.appimage]
manylinux = "manylinux_2_28"

system_requires = [
# ?? FIXME
]

linuxdeploy_plugins = [
]

[tool.briefcase.app.mir_commander.linux.flatpak]
flatpak_runtime = "org.kde.Platform"
flatpak_runtime_version = "6.9"
flatpak_sdk = "org.kde.Sdk"

[tool.briefcase.app.mir_commander.windows]
requires = [
]

# Mobile deployments
[tool.briefcase.app.mir_commander.iOS]
supported = false

[tool.briefcase.app.mir_commander.android]
supported = false

# Web deployments
[tool.briefcase.app.mir_commander.web]
supported = false
